<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_products"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_drops"
        android:icon="@drawable/ic_drops"
        android:title="@string/title_drops" />
    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_service"
        android:title="@string/title_services" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account" />
</menu>